--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       cnt=0;
       score=0;
       timeStamp=0;
+      clearInterval(ready);
       ready=setInterval(interval, 1000);
     });
 
